# genaistudio-cookiecutter

./: README.md  cookiecutter.json
hooks/: github_helper.py  post_gen_project.py
{{ cookiecutter.__project_name_kebab_case }}/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
{{ cookiecutter.__project_name_kebab_case }}/.github/workflows/: test.yml
{{ cookiecutter.__project_name_kebab_case }}/.streamlit/: config.toml
{{ cookiecutter.__project_name_kebab_case }}/Config/: .env.secret.template
{{ cookiecutter.__project_name_kebab_case }}/src/: __init__.py  api.py  cli.py  speech.py
{{ cookiecutter.__project_name_kebab_case }}/src/components/: chat.py  model_selection.py
{{ cookiecutter.__project_name_kebab_case }}/src/config/: settings.py
{{ cookiecutter.__project_name_kebab_case }}/src/models/: llm.py
{{ cookiecutter.__project_name_kebab_case }}/src/models/custom/: llama3.py  mistral_large.py
{{ cookiecutter.__project_name_kebab_case }}/src/{{ cookiecutter.__project_name_snake_case }}/: __init__.py  api.py  cli.py  speech.py
{{ cookiecutter.__project_name_kebab_case }}/tests/: __init__.py  test_api.py  test_cli.py  test_import.py
